updating personal fix spacing in photos and about

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -28,7 +28,7 @@ nav {
 		font-size: 12px;
 		display: inline;
 		font-weight: 500;
-		margin-left: 5px;
+		margin-left: 10px;
 		&:hover {
 			text-emphasis: underline;
 		}
@@ -121,6 +121,10 @@ section {
 	}
 	.section-copy {
 		margin-bottom: 50px;
+
+		&:first-child {
+			margin-top: 0px;
+		}
 		a {
 			text-decoration: underline;
 			text-align: left;
@@ -173,43 +177,36 @@ section {
 	}
 }
 
-.section-timer, .section-china, .section-aboutp {
-	margin-bottom: 25px;
-}
-
-.section-photo {
-
+.photo {
 	section {
+		padding-top: 0;
 		padding-bottom: 0;
-		margin-bottom: $bottom-25px;
 	}
-	.subsection-subhead {
-		margin-bottom: 70px;
+	.section-intro {
+		padding: 100px 0;
 	}
-	.section-header {
-		margin-bottom: $bottom-25px;
+	.section-photo {
+		margin-bottom: 100px;
 	}
 }
 
 .section-about {
-
+	section {
+		padding-bottom: 70px;
+		margin-bottom: $bottom-25px;
+	}
 	h2 {
 		text-align: left;
 		font-size: 60px;
-
 	}
 	.section-copy {
 		margin-bottom: 0;
 		margin-top: 25px;
-		font-size: 20px;
-		line-height: 30px;
+		line-height: 29px;
+    font-size: 20px;
 	}
 	.section-header {
 		margin-bottom: 30px;
-	}
-	section {
-		padding-bottom: 70px;
-		margin-bottom: $bottom-25px;
 	}
 }
 
